# zcash-fhe-analytics

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  nginx.conf  package.json  requirements.txt
.github/workflows/: native-sdk.yml
backend/: .env.example  Dockerfile  analytics_suite.py  app.py  auth.py  cache_manager.py  config.py  init_db.py  models.py  oracle.py  oracle_updater.py  package.json  prometheus_metrics.py  rate_limiter.py  tsconfig.json  websocket_manager.py
backend/fhe_core/: bfv.py  bigint.py  ckks.py  ckks_production.py  gaussian.py  ntt.py  polynomial.py  relinearization.py  utils.py
backend/src/: app.ts  index.ts
backend/test/: types.test.ts  utils.test.ts
backend/threshold/: dkg.py  shamir.py  threshold_decrypt.py
contracts/: .env.example  hardhat.config.ts  package.json  tsconfig.json
contracts/scripts/: deploy.ts
contracts/src/: ZcashFHEAnalytics.sol
contracts/test/: ZcashFHEAnalytics.test.ts
docs/: developer_integration.md  privacy_analysis.md  wallet_integration.md  zashi_integration_analysis.md
ethereum-oracle/: hardhat.config.js  package-lock.json  package.json
frontend/: Dockerfile  app.js  index.html  nginx.conf  package.json  shielded_transactions_section.html  tailwind.config.js  vite.config.ts
mobile/native/rust/: Cargo.toml  build.rs
mobile/native/rust/src/: android.rs  encryption.rs  error.rs  keys.rs  lib.rs  proof.rs  types.rs  zcash_fhe_core.udl
zashi-sdk-ios/: INTEGRATION.md  Package.swift
zashi-sdk-kotlin/: FHEAnalyticsSDK.kt  INTEGRATION.md  build.gradle.kts
(+55 files in other folders)
