[package]
name = "zcash-fhe-core"
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["Electric Coin Company"]
description = "Native FHE encryption library for Zcash analytics"

[lib]
crate-type = ["staticlib", "cdylib"]
name = "zcash_fhe_core"

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi_bindgen.rs"

[dependencies]
tfhe = { version = "0.11", features = ["boolean", "shortint", "integer", "zk-pok"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
bincode = "1.3"
sha3 = "0.10"
thiserror = "1.0"
once_cell = "1.19"
parking_lot = "0.12"
uniffi = { version = "0.25", features = ["cli"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", default-features = false }

[build-dependencies]
uniffi = { version = "0.25", features = ["build"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true

[features]
default = []
uniffi-bindgen = ["uniffi/cli"]
